compiler/tests/pass/import_package/math/util.afns
package math.util;

import math.helper;

pub fn add_two(v: i32) -> i32 {
    return inc(inc(v));
}
