compiler/tests/fail/private_type_import/lib/api.afns
package lib.api;

struct Secret {
    value: i32;
}

pub fn make() -> Secret {
    return Secret { value: 7 };
}
